--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "ascallback": "^1.1.1",
     "async": "^1.5.2",
     "naan": "^1.3.11",
-    "neo4j-driver": "^1.1.0-M01",
+    "neo4j-driver": "^1.7.2",
     "request": "^2.83.0",
     "seraph-core": "^1.1.1",
     "thunkify": "^2.1.2",
